fix flow_wrap to flow wrap

--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -5,8 +5,7 @@
 	max-width: 100%;
 	margin-right: auto;
 	margin-left: auto;
-	@include display_flex(row_wrap);
-
+	@include display_flex(row wrap);
 }
 
 // LEVEL 2: flow_container // 
